docs/EBNF/draft_2021-01-01.ebnf
translation_unit ::= ((attribute*) | const_declaration)*;
attribute ::= "[" identifier "]";
const_declaration ::= "const" declaration_body;
let_declaration ::= "let" declaration_body;
declaration_body ::= identifier "=" expression ";";
expression ::= literal | call_expression | function_expression;
call_expression ::= identifier ("." identifier)* args;
args ::= "(" (expression ",")* expression? ")";
function_expression ::= "(" ")" "=>" compound_expression;
expression_statement ::= expression ";";
compound_expression ::= "{" (expression_statement)* (expression)? "}";
